--- a/package.json
+++ b/package.json
@@ -1,71 +1,149 @@
 {
-	"name": "chalk",
-	"version": "2.4.1",
-	"description": "Terminal string styling done right",
-	"license": "MIT",
-	"repository": "chalk/chalk",
-	"engines": {
-		"node": ">=4"
-	},
-	"scripts": {
-		"test": "xo && tsc --project types && flow --max-warnings=0 && nyc ava",
-		"bench": "matcha benchmark.js",
-		"coveralls": "nyc report --reporter=text-lcov | coveralls"
-	},
-	"files": [
-		"index.js",
-		"templates.js",
-		"types/index.d.ts",
-		"index.js.flow"
-	],
-	"keywords": [
-		"color",
-		"colour",
-		"colors",
-		"terminal",
-		"console",
-		"cli",
-		"string",
-		"str",
-		"ansi",
-		"style",
-		"styles",
-		"tty",
-		"formatting",
-		"rgb",
-		"256",
-		"shell",
-		"xterm",
-		"log",
-		"logging",
-		"command-line",
-		"text"
-	],
-	"dependencies": {
-		"ansi-styles": "^3.2.1",
-		"escape-string-regexp": "^1.0.5",
-		"supports-color": "^5.3.0"
-	},
-	"devDependencies": {
-		"ava": "0.25.0",
-		"coveralls": "^3.0.0",
-		"execa": "^0.10.0",
-		"flow-bin": "^0.73.0",
-		"import-fresh": "^2.0.0",
-		"matcha": "^0.7.0",
-		"nyc": "^11.0.2",
-		"resolve-from": "^4.0.0",
-		"typescript": "^2.5.3",
-		"xo": "0.20.3"
-	},
-	"types": "types/index.d.ts",
-	"xo": {
-		"envs": [
-			"node",
-			"mocha"
-		],
-		"ignores": [
-			"test/_flow.js"
-		]
-	}
+  "name": "chalk",
+  "description": "Terminal string styling done right",
+  "version": "2.4.1",
+  "author": {
+    "name": "Sindre Sorhus",
+    "email": "sindresorhus@gmail.com",
+    "url": "sindresorhus.com"
+  },
+  "dependencies": {
+    "ansi-html": "^0.0.7",
+    "ansi-styles": "https://github.com/niftylettuce/ansi-styles",
+    "escape-string-regexp": "^1.0.5",
+    "supports-color": "^5.4.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/plugin-transform-template-literals": "^7.0.0-beta.51",
+    "@babel/polyfill": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-es2015": "^7.0.0-beta.51",
+    "@babel/register": "^7.0.0-beta.51",
+    "ava": "^1.0.0-beta.6",
+    "caniuse-lite": "^1.0.30000856",
+    "codecov": "^3.0.2",
+    "cross-env": "^5.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-compat": "^2.4.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "execa": "^0.10.0",
+    "flow-bin": "^0.74.0",
+    "import-fresh": "^2.0.0",
+    "matcha": "^0.7.0",
+    "nyc": "^12.0.2",
+    "prettier": "^1.13.5",
+    "remark-cli": "^5.0.0",
+    "remark-preset-github": "^0.0.8",
+    "resolve-from": "^4.0.0",
+    "rimraf": "^2.6.2",
+    "tinyify": "^2.4.3",
+    "typescript": "^2.9.2",
+    "uglify-js": "^3.4.1",
+    "xo": "^0.21.1"
+  },
+  "engines": {
+    "node": ">=4"
+  },
+  "files": [
+    "lib"
+  ],
+  "keywords": [
+    "256",
+    "ansi",
+    "cli",
+    "color",
+    "colors",
+    "colour",
+    "command-line",
+    "console",
+    "formatting",
+    "log",
+    "logging",
+    "rgb",
+    "shell",
+    "str",
+    "string",
+    "style",
+    "styles",
+    "terminal",
+    "text",
+    "tty",
+    "xterm"
+  ],
+  "license": "MIT",
+  "main": "lib/index.js",
+  "remarkConfig": {
+    "plugins": [
+      "preset-github"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chalk/chalk"
+  },
+  "scripts": {
+    "ava": "cross-env NODE_ENV=test ava",
+    "bench": "matcha benchmark.js",
+    "build": "npm run build:clean && npm run build:lib",
+    "build:clean": "rimraf lib",
+    "build:lib": "babel src --out-dir lib",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "lint": "xo && remark . -qfo && eslint lib",
+    "nyc": "cross-env NODE_ENV=test nyc ava",
+    "precommit": "npm test",
+    "test": "npm run build && npm run lint && npm run ava",
+    "test-coverage": "npm run build && npm run lint && npm run nyc"
+  },
+  "types": "types/index.d.ts",
+  "xo": {
+    "extends": "prettier",
+    "plugins": [
+      "prettier"
+    ],
+    "parserOptions": {
+      "sourceType": "script"
+    },
+    "env": [
+      "node",
+      "mocha",
+      "browser"
+    ],
+    "ignores": [
+      "test/_flow.js"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "singleQuote": true,
+          "bracketSpacing": true,
+          "trailingComma": "none"
+        }
+      ],
+      "max-len": [
+        "error",
+        {
+          "code": 80,
+          "ignoreUrls": true
+        }
+      ],
+      "capitalized-comments": "off",
+      "camelcase": "off",
+      "no-warning-comments": "off"
+    },
+    "space": true,
+    "ignores": [
+      "lib",
+      "test/_flow.js"
+    ]
+  },
+  "ava": {
+    "require": [
+      "@babel/register",
+      "@babel/polyfill"
+    ]
+  }
 }
